<resources>
    <string name="app_name">X Roads Through the Castle</string>
    <string name="tvTituloLogin">Iniciar sesión</string>
    <string name="tieUserHint">Nombre de usuario</string>
    <string name="tiePasswordHint">Introduzca la contraseña</string>
    <string name="chxRemember">Recuérdame</string>
    <string name="btSingUp">Registrar</string>
    <string name="btSingIn">Iniciar sesión</string>
    <string name="tvOtherLogin">Iniciar sesión con otras plataformas</string>
    <string name="tvTitleSingUp">Registrar</string>
    <string name="tieEmailHint">Introduce tu email</string>
    <string name="tieConfirmPassword">Confirmar contraseña</string>
    <string name="imgbtNoticias">Noticias</string>
    <string name="imgbtChat" translatable="false">Chat</string>
    <string name="imgbtGuia">Guía</string>
    <string name="imgbtBugs" translatable="false">Bugs</string>
    <string name="imgbtSettings">Configuración</string>
    <string name="imgbtAboutUs">Sobre nosotros</string>
    <string name="imgbtUser">Usuario</string>
    <string name="imgbtHelp">Ayuda</string>
    <string name="btCrear">Crear</string>
    <string name="tieDescripcion">Descripción</string>
    <string name="tiePassword">Contraseña</string>
    <string name="rbPrivado">Privado</string>
    <string name="rbPublico">Público</string>
    <string name="tvTipo">Tipo</string>
    <string name="tieName">Nombre</string>
    <string name="tvCrearChat">Crear chat</string>
    <string name="aboutUs_description">Creador del juego X_RTC. Apasionado de los videojuegos</string>
    <string name="fabChat">Añadir nuevo chat</string>
    <string name="fabBug">Añadir nuevo bug</string>
    <string name="aboutUs_subTitle">Desarrollador Móvil</string>
    <string name="aboutUs_brief">Creador del juego X_RTC. Apasionado de los videojuegos</string>
    <string name="validarDatos_string">Nombre inválido, solo letras</string>
    <string name="validarDatos_password">Contraseña incorrecta, mínimo 8 caracteres</string>
    <string name="validarDatos_paswordIgual">Las contraseñas no son iguales</string>
    <string name="validarDatos_email">El formato del email no es válido</string>
    <string name="btGoogle">Iniciar sesión en Google</string>
    <string name="btFacebook">Iniciar sesión de Facebook</string>
    <string name="splash_img_logo">Logo de la aplicación</string>
    <string name="prueba_bug_item_tvName">Título del bug</string>
    <string name="tvTitleBug">Informar Bug</string>
    <string name="tvGravedad">Gravedad</string>
    <string name="tvDispositivo">Dispositivo</string>
    <string name="tvSO">Sistema Operativo</string>
    <string name="btConfirmar">Confirmar</string>
    <string name="spTipo">Elige entre diferentes tipo</string>
    <string name="spGravedad">Elige entre los diferentes tipos de gravedad</string>
    <string name="spDispositivo">Elige entre los diferentes tipos de dispositivos</string>
    <string name="spSO">Elige entre los diferentes sistemas operativos</string>
    <string name="prueba_tvName">Nombre del chat</string>
    <string name="prueba_tvDescripcion">Descripción</string>
    <string name="imgChat">Muestra el logo de un chat</string>
    <string name="ibStar">Muestra una estrella</string>
    <string name="btSalirGoogle">Salir Google</string>
    <string name="btSalirFacebook">Salir Facebook</string>
    <string name="btCerrarSesion">Cerrar Sesión</string>
    <string name="tvIdioma">Idioma</string>
    <string name="tvLetra">Tamaño de la letra</string>
    <string name="ibSpain">Español</string>
    <string name="ibUK">Inglés</string>
    <string name="tvTitleUser">Usuario</string>
    <string name="tilUser">Nombre</string>
    <string name="tieEmail">Email</string>
    <string name="btCambiarPassword">Cambiar contraseña</string>
    <string name="menu_chat_ordenar">Ordenar por nombre</string>
    <string name="notification_header">Notificaciones</string>
    <string name="help_header">Ayuda</string>
    <string name="help_point">Punto de ayuda</string>
    <string name="privacy_and_condition">Privacidad y condiciones</string>
    <string name="key_help_point" translatable="false">help_point</string>
    <string name="key_notification_chat" translatable="false">notification</string>
    <string name="key_ringtone_chat" translatable="false">ringtone</string>
    <string name="title_ringtone_chat">Tono</string>
    <string name="summary_ringtone_chat">El sonido que tendrá la notificación</string>
    <string name="key_user" translatable="false">user</string>
    <string name="title_user">Usuario</string>
    <string name="summary_user">Opciones para modificar tu usuario</string>
    <string name="summaty_notification_chat">Activar las notificaciones de los mensajes del chat</string>
    <string name="title_notification_chat">Activar notificaciones</string>
    <string name="defaul_web_client_id" translatable="false">751565801750-uqbur7sbpgs9tiou98ua4dbm34ht3lg9.apps.googleusercontent.com</string>
    <string name="key_user_change_password" translatable="false">user_change_password</string>
    <string name="user_change_password">Cambiar contraseña</string>
    <string name="summary_user_change_password">Cambia la contraseña de tu usuario</string>
    <string name="key_user_name" translatable="false">user_name</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="summary_user_name">Cambia tu nombre de usuario</string>
    <string name="key_languages" translatable="false">languages</string>
    <string name="summary_languages">Idioma principal de la aplicación</string>
    <string name="title_languages">Idioma</string>
    <string name="menu_chat_ordenar_favorito">Ordenar por favoritos</string>
    <string name="errNameEmpty">El nombre no puede estar vacío</string>
    <string name="title_edit_chat">Editar chat</string>
    <string name="facebook_app_id" translatable="false">1047312215828067</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1047312215828067</string>
    <string name="prepareFacebook">el incio de sesión con facebook se encuentra en desarollo</string>
    <string name="title_list_chat">Listar chat</string>
    <string name="title_list_bug">Listar bug</string>
    <string name="title_edit_bug">Editar bug</string>
    <string name="menu_chat_lupa">Lupa</string>
    <string name="menu_bug_lupa">Lupa</string>
    <string name="menu_bug_ordenar_resultado">Ordernar por resuelto</string>
    <string name="title_add_bug">Añadir bug</string>
    <string name="bug_item_hint">Esto es un bug</string>
    <string name="exampleChat">Aquí se mostrarán los mensajes</string>
    <string name="hint_tvMessage">Mensaje</string>
    <string name="menu_messages_edit">editar</string>
    <string name="title_add_chat">Añadir chat</string>
    <string name="title_messages">Mensajes</string>
    <string name="entrar">Entrar</string>
    <string name="salir">Salir</string>
    <string name="errPasswordIncorrect">La contraseña es incorrecta</string>
    <string name="no_data">No hay datos</string>
    <string name="name_channel" translatable="false">XRTC_channel</string>
    <string name="action_foro">Foro</string>
    <string name="action_bug">Bugs</string>
    <string name="action_guia">Guía</string>
    <string name="menu_options">Opciones</string>
    <string name="action_aboutus">Sobre nosotros</string>
    <string name="action_settings">Ajustes</string>
    <string name="tvUser" translatable="false">JesusC24</string>
    <string name="tvEmailr" translatable="false">jesus.cortesocana2408@gmail.com</string>
    <string name="putPasswoord">Poner la contraseña</string>
    <string name="delete_chat">Eliminar chat</string>
    <string name="ask">¿Seguro que desea borrar el chat?</string>
    <string name="delete_chat_success">"Se ha borrado el chat "</string>
    <string name="undo_success">Operación cancelada</string>
    <string name="editSuccessChat">"Se ha editado el chat "</string>
    <string name="exit">con exito</string>
    <string name="bug_description">Descripcion</string>
    <string name="bug_comentarios">Comentarios</string>
    <string name="bug_info" translatable="false">Info</string>
    <string name="title_foro">Chat</string>
    <string name="summary_foro">Opciones para modificar el chat</string>
    <string name="key_foro" translatable="false">foro</string>
    <string name="key_bug" translatable="false">bug</string>
    <string name="summary_bug">Opciones para modificar los bugs</string>
    <string name="title_bug" translatable="false">Bug</string>
    <string name="notification_title_add_dependency">Chat añadido</string>
    <string name="notification_title_add_bug">Bug añadido</string>
    <string name="errEditBug">No se puede editar un bug que está resuelto o denegado</string>
    <string name="user_closed_session">Cerrar sesión</string>
    <string name="summary_user_closed_session">Cierra sesión del usuario</string>
    <string name="key_user_closed_session" translatable="false">user_closed_session</string>
    <string name="key_favorito_chat" translatable="false">favorito_chat</string>
    <string name="summaty_favorito_chat">Mostrar chat favoritos</string>
    <string name="title_favorito_chat">Mostrar chats favoritos</string>
    <string name="summary_favorito_chat">Muestra solo aquellos chats que están marcado como favoritos</string>
    <string name="key_user_delete" translatable="false">user delete</string>
    <string name="user_delete">Eliminar cuenta</string>
    <string name="summary_user_delete">Cierra la cuenta y la elimina del sistema permanentemente</string>
    <string name="key_resultado_bug" translatable="false">resultado_bug</string>
    <string name="summary_resultado_bug">Mostrar la lista ordena por los que se han resultado</string>
    <string name="title_resuelto_bug">Ordenar por bug resuelto</string>
    <string name="tvBugTipo">Tipo</string>
    <string name="tvBugGravedad">Gravedad</string>
    <string name="tvBugDispositivo">Dispositivo</string>
    <string name="tvBugSO">Sistema operativo</string>
    <string name="key_order_favorito_chat" translatable="false">order chat</string>
    <string name="summary_order_favorito_chat">Ordena por favoritos la lista de Chats</string>
    <string name="title_order_favorito_chat">Ordenar por favoritos</string>
    <string name="anadir_imagen">Añadir imagen</string>
    <string name="on_sucess_login">Se ha iniciado sesión</string>
    <string name="err_auth">Error de autenticación</string>
    <string name="err_emailRepeat">El email ya se encuentra registrado</string>
    <string name="err_noDisponible">Esta opción no se encuentra desponible</string>
    <string name="my_name">Jesús Cortés Ocaña</string>
    <string name="confirmCloseSession">¿Estás seguro que quieres cerrar la sesión?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="confirmDeleteAccount">¿Estás seguro que deseas borrar permanentemente tu cuenta?</string>
    <string name="user_preferences">Preferencias de usario</string>
    <string name="err_deleteAccount">Error al borrar la cuenta</string>
    <string name="KEY_NAME" translatable="false">name</string>
    <string name="err_changeUser">No se ha podido cambiar el usuario</string>
    <string name="tiePasswordActual">Introduzca la contraseña actual</string>
    <string name="tiePasswordNew">Nueva contraseña</string>
    <string name="err_changePassword">No se ha podido cambiar correctamente la contraseña</string>
    <string name="changePassword">Cambiar contraseña</string>
    <string name="errPasswordAllComplete">Algún campo está vacío</string>
    <string name="key_user_change_image" translatable="false">user_change_image</string>
    <string name="summary_user_change_image">Cambia la imagen de tu usuario</string>
    <string name="err_changeImage">No se ha podido actualizar la imagen</string>
    <string name="chat_update">Actualizar</string>
</resources>