<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Vamos a crear una categoría que muestra otro Fragment de preferencias -->
    <Preference
        android:fragment="com.jesusc24.xroadsthroughthecastle.ui.configuracion.UserFragment"
        app:icon="@drawable/ic_user"
        app:key="@string/key_user"
        app:summary="@string/summary_user"
        app:title="@string/title_user" />

    <Preference
        android:fragment="com.jesusc24.xroadsthroughthecastle.ui.configuracion.ForoFragment"
        app:icon="@drawable/ic_foro_menu"
        app:key="@string/key_foro"
        app:summary="@string/summary_foro"
        app:title="@string/title_foro" />

    <Preference
        android:fragment="com.jesusc24.xroadsthroughthecastle.ui.configuracion.BugFragment"
        app:icon="@drawable/ic_bug_menu"
        app:key="@string/key_bug"
        app:summary="@string/summary_bug"
        app:title="@string/title_bug" />

    <!-- Preferencias con las opciones de la AYUDA, que se mostrará una página WEB-->
    <PreferenceCategory app:title="@string/help_header"
        app:icon="@drawable/ic_help_menu">

        <Preference
            app:key="@string/key_help_point"
            app:title="@string/help_point">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://sru-wiki.achisoft.net/tiki-index.php" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>