<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="false"
        app:key="@string/key_order_favorito_chat"
        app:summary="@string/summary_order_favorito_chat"
        app:title="@string/title_order_favorito_chat" />


    <!-- Preferencias con las opciones de las motificaciones -->
    <PreferenceCategory app:title="@string/notification_header"
        app:icon="@drawable/ic_notification_menu">

        <SwitchPreference
            android:defaultValue="true"
            app:key="@string/key_notification_chat"
            app:summary="@string/summaty_notification_chat"
            app:title="@string/title_notification_chat" />

        <ListPreference
            android:dependency="@string/key_notification_chat"
            android:entries="@array/ringtone"
            android:entryValues="@array/ringtone_values"
            app:key="@string/key_ringtone_chat"
            app:summary="@string/summary_ringtone_chat"
            app:title="@string/title_ringtone_chat" />
    </PreferenceCategory>
</PreferenceScreen>