<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
    <item android:title="@string/action_foro"
        android:id="@+id/chatListFragment"
        android:icon="@drawable/ic_icono_foro"/>

    <item android:title="@string/action_bug"
        android:id="@+id/bugListFragment"
        android:icon="@drawable/icono_bugs"/>

    <item android:title="@string/action_guia"
        android:id="@+id/guiaFragment"
        android:icon="@drawable/icono_guia_menu"/>

    </group>

    <item android:title="@string/menu_options">
        <menu>
            <item android:title="@string/action_aboutus"
                android:orderInCategory="99"
                android:id="@+id/aboutUsFragment"
                android:icon="@drawable/icono_about_us"
                app:showAsAction="never"/>
            <item android:title="@string/action_settings"
                android:orderInCategory="100"
                android:id="@+id/settingsFragment"
                android:icon="@drawable/icono_settings"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>