<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.foro.ChatListFragment"
    android:layout_margin="@dimen/crear_chat_layout_margin">

    <TextView
        android:id="@+id/tvTitleCrearChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCrearChat"
        android:textSize="@dimen/crear_chat_title_size"
        android:layout_gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/TextInputLayoutWithoutBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/crear_chat_tilName_marginTop"
        android:layout_marginBottom="@dimen/crear_til_margin"
        app:startIconDrawable="@drawable/ic_action_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/crear_til_margin"
        android:layout_marginBottom="@dimen/crear_til_margin"
        android:text="@string/tvTipo" />

    <RadioGroup
        android:id="@+id/rgTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbPublico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbPublico" />

        <RadioButton
            android:id="@+id/rbPrivado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbPrivado" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/TextInputLayoutWithoutBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/crear_til_margin"
        android:layout_marginBottom="@dimen/crear_til_margin"
        app:startIconDrawable="@drawable/ic_action_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        style="@style/TextInputLayoutWithoutBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/crear_til_margin"
        android:layout_marginBottom="@dimen/crear_til_margin"
        app:startIconDrawable="@drawable/ic_action_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieConfirmPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcion"
        style="@style/TextInputLayoutWithoutBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/crear_til_margin"
        app:startIconDrawable="@drawable/ic_action_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieDescripcion" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/crear_chat_btCrear_marginTop"
        android:text="@string/btCrear" />
</LinearLayout>