<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:fontFamily="@font/noto_sans_bold">

    <TextView
        android:id="@+id/tvTituloLogin"
        android:fontFamily="@font/noto_sans_bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/login_tvTituloLogin_margin_top"
        android:textSize="@dimen/RTC_title_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTituloLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/RTCTextInputLayout"
        android:layout_marginTop="@dimen/login_tilUser_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieEmail"
            android:fontFamily="@font/noto_sans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieEmailHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/RTCTextInputLayout"
        android:layout_marginTop="@dimen/login_tilPassword_margin_top"
        android:layout_width="match_parent"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:fontFamily="@font/noto_sans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/tiePasswordHint"
            app:errorEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/linear_checkBox_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chxRemember"
            android:fontFamily="@font/noto_sans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/chxRemember"/>

        <Button
            android:id="@+id/btSingUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_sans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/btSingUp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btSingIn"
        android:layout_width="@dimen/login_btSingIn_layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_btSingIn_margin_top"
        android:fontFamily="@font/noto_sans"
        android:text="@string/btSingIn" />

    <!-- Con la etiqueta include se añade un progressBar o dialog, que inicialmente está
    oculto y se mostrará en las operaciones asíncronas-->
    <include
        android:id="@+id/include_progressbar"
        layout="@layout/layout_progressbar"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_weight="1"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/tvOtherLogin"
        android:textStyle="bold"
        android:gravity="bottom|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/login_tvOtherLogin_padding_botoom"
        android:text="@string/tvOtherLogin"/>

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/icono_google"
            android:contentDescription="@string/btGoogle" />

        <ImageButton
            android:id="@+id/btFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/icono_facebook"
            android:contentDescription="@string/btFacebook" />
    </LinearLayout>

</LinearLayout>