<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.configuracion.ConfiguracionFragment">

    <Button
        android:id="@+id/btSalirGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/configuracion_btSalirGoogle_marginStart"
        android:layout_marginTop="@dimen/configuracion_btSalirGoogle_marginTop"
        android:text="@string/btSalirGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbLetra" />

    <Button
        android:id="@+id/btSalirFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/configuracion_btSalirFacebook_marginTop"
        android:layout_marginEnd="@dimen/configuracion_btSalirFacebook_marginEnd"
        android:text="@string/btSalirFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbLetra" />

    <Button
        android:id="@+id/btCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCerrarSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSalirGoogle" />

    <TextView
        android:id="@+id/tvIdioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/configuracion_tvIdioma_marginTop"
        android:text="@string/tvIdioma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLetra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/configuracion_tvLetra_marginTop"
        android:text="@string/tvLetra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIdioma" />

    <SeekBar
        android:id="@+id/sbLetra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/configuracion_sbLetra_marginStart"
        android:layout_marginTop="@dimen/configuracion_sbLetra_marginTop"
        android:layout_marginEnd="@dimen/configuracion_sbLetra_marginEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/ibUK" />

    <ImageView
        android:id="@+id/ibSpain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/configuracion_ivSpain_marginTop"
        android:src="@drawable/img_spain"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ibSpain" />

    <ImageView
        android:id="@+id/ibUK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/configuracion_ivUK_marginTop"
        android:src="@drawable/img_uk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toEndOf="@+id/ibSpain"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ibUK" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tvIdioma,tvLetra"/>
</androidx.constraintlayout.widget.ConstraintLayout>